cmake_minimum_required(VERSION 3.12)
project(suisha VERSION 202508)
find_package(suisha 202408 REQUIRED)
find_package(DBus1 1.8 REQUIRED)
find_package(xemmai 202508 REQUIRED)
add_subdirectory(src)
add_subdirectory(xemmai)
enable_testing()
add_subdirectory(test)
add_subdirectory(examples)
install(DIRECTORY include/suisha DESTINATION include)
set_property(TARGET suishadbus PROPERTY INSTALL_RPATH "\$ORIGIN")
install(TARGETS suishadbus DESTINATION lib)
set_property(TARGET suisha-xemmai suishadbus-xemmai PROPERTY INSTALL_RPATH "\$ORIGIN/..")
install(TARGETS suisha-xemmai suishadbus-xemmai DESTINATION lib/xemmai-${xemmai_VERSION_MAJOR})
